# ThomasAI

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  chat.html  debug_imports.py  game.html  import_data.py  index.html  init_db.py  package-lock.json  package.json  payments.csv  pyproject.toml  requirements.txt  run.py  run_wrapper.sh  setup.py  simplified_setup.py  stop_thomas.sh
Docs/: bug_report.md  index.md  installation.md  knowledge_management.md  pull_request_template.md  user_guide.md
api/: endpoints.py  knowledge_endpoints.py  main.py  project_endpoints.py
database/: db_manager.py
models/: asset_tracker.py  base.py  budget_tracker.py  knowledge_models.py  payment_tracker.py
scripts/: launch_thomas.sh  launch_with_venv.sh  migrate_to_postgresql.py  restart.sh  restart_original_port.sh  run_wrapper.sh  start.sh  stop.sh  stop_thomas.sh
services/: ai_assistant.py  asset_tracker_enhanced.py  budget_visualizer.py  enhanced_knowledge_base.py  knowledge_base.py  payment_processor.py  trello_manager.py
static/: game.html  package-lock.json  package.json  style.css  stytle.css
templates/: chat.html  game.html  index.html
tests/: __init__.py  test_api.py  test_connection.py  test_dashboard.py  test_dashboard_direct.py  test_modules.py  test_streamlit.py
ui/: chat_with_thomas.py  dashboard.py  document_uploader.py  enhanced_knowledge_manager.py  knowledge_manager.py  payment_details.py  project_detail.py
utils/: import_payments.py  initialize_assets.py  initialize_db.py  initialize_projects.py  (+1 more)
(+7 files in other folders)
